--- a/package.json
+++ b/package.json
@@ -15,22 +15,29 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
     "@tanstack/react-query": "^5.66.9",
+    "@types/date-fns": "^2.5.3",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "date-picker": "^0.5.0",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.477.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.2.1",
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
